--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 
         #status {
             position: absolute;
-            bottom: 20px;
-            left: 20px;
+            top: 20px;
+            right: 760px;
             z-index: 1000;
             background: rgba(0, 0, 0, 0.8);
             padding: 15px;
